# docuengine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: GOAL.md  GOOGLE_DRIVE_MEDIA.md  LIGHTWEIGHT_ARCHITECTURE.md  SIDECAR_INDEXING.md
docuengine/: __init__.py  __main__.py  cli.py  clip_index.py  drive_ledger.py  fcpxml.py  ingest.py  models.py  planner.py  policy.py  qa.py  render_checks.py  sources.py  storage.py
projects/metallurgical-crucible/: README.md  beat_plan.json  citations.json  drive_ledger_candidate_rows.csv  drive_media_manifest.json  fact_check_matrix.json  handoff_notes.md  narration_script.md  production_gaps.json  project.json  research_brief.md  review_gates.json  shot_list.json  source_candidates.json  source_queries.json  source_verification.md  timeline.json
projects/metallurgical-crucible/sidecars/: README.md
tests/: test_clip_index.py  test_drive_ledger.py  test_engine.py  test_fcpxml.py  test_pipeline.py  test_render_checks.py  test_storage.py
